--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,8 @@ pygments: true
 # Themes are encouraged to use these universal variables
 # so be sure to set them if your theme uses them.
 #
-title : Dave's site
-tagline: Dave's Tagline
+title : Daves site
+tagline: Daves Tagline
 author :
   name : Dave Stagner
   email : dave@baqbeat.com
@@ -82,7 +82,7 @@ JB :
   comments :
     provider : disqus
     disqus :
-      short_name : jekyllbootstrap
+      short_name : davestagner
     livefyre :
       site_id : 123
     intensedebate :
@@ -100,9 +100,9 @@ JB :
   analytics :
     provider : google
     google :
-        tracking_id : 'UA-***'
+        tracking_id : 'UA-40292660-1'
     googleUA :
-        tracking_id : 'UA-***'
+        tracking_id : 'UA-40292660-1'
         property_name : 'PROPERTY NAME'
     getclicky :
       site_id :
