--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule ".themes/yinyang"]
 	path = .themes/yinyang
 	url = https://github.com/qingwang/octopress-theme-yinyang
+[submodule ".themes/MediumFox"]
+	path = .themes/MediumFox
+	url = https://github.com/sevenadrian/MediumFox
