--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@
 # ----------------------- #
 
 url: http://davestagner.com
-title: Hello lunch!
-subtitle: Random musings
+title: Dave Stagner
+subtitle: Or, "Hello, lunch!"
 author: Dave Stagner
 simple_search: https://www.google.com/search
 description:
@@ -41,8 +41,9 @@ rdiscount:
     - smart
 highlighter: pygments # default python pygments have been replaced by pygments.rb
 
-paginate: 10          # Posts per page on the blog index
-paginate_path: "posts/:num"  # Directory base for pagination URLs eg. /posts/2/
+paginate: 5          # Posts per page on the blog index
+#paginate_path: "posts/:num"  # Directory base for pagination URLs eg. /posts/2/
+pagination_dir: posts
 recent_posts: 5       # Posts in the sidebar Recent Posts section
 excerpt_link: "Read on &rarr;"  # "Continue reading" link text at the bottom of excerpted articles
 excerpt_separator: "<!--more-->"
@@ -95,7 +96,7 @@ disqus_short_name:
 disqus_show_comment_count: false
 
 # Google Analytics
-google_analytics_tracking_id:
+google_analytics_tracking_id: UA-40292660-1
 
 # Facebook Like
 facebook_like: false
