fixed date format

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 url: http://davestagner.com
 title: Dave Stagner
-subtitle: Or, "Hello, lunch!"
+subtitle: "Hello lunch!"
 author: Dave Stagner
 simple_search: https://www.google.com/search
 description:
