added disqus comments

--- a/_config.yml
+++ b/_config.yml
@@ -10,3 +10,11 @@ github_username:  dstagner
 
 # Build settings
 markdown: kramdown
+
+
+# Disqus Comments
+disqus_short_name: davestagner
+disqus_show_comment_count: true
+
+# Google Analytics
+google_analytics_tracking_id: UA-40292660-1
